# ClaudeCertifiedArchitectFundamentos

./: README.md  main.py  pyproject.toml
clases/: repaso-mas-falladas-d1-d2.md
clases/clase_1/: clase_1.ipynb  terminos.md
clases/clase_2/: clase_2.ipynb
clases/clase_3/: clase-3.ipynb
clases/clase_4/: clase_4.ipynb
