[project]
name = "claudecertifiedarchitect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.105.2",
    "claude-agent-sdk>=0.2.91",
    "ipykernel>=7.2.0",
    "pydantic[email]>=2.13.4",
    "openai>=1.0.0",
    "numpy>=2.0.0",
    "matplotlib>=3.8.0",
    "python-dotenv>=1.0.0",
]
